@startuml

title __TASK7's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Starter {
    }
  }
  

  namespace sample {
    namespace components {
      class sample.components.CloseComponent {
      }
    }
  }
  

  namespace sample {
    namespace components {
      class sample.components.PlaySoundComponent {
      }
    }
  }
  

  namespace sample {
    namespace components {
      class sample.components.ShowImageComponent {
      }
    }
  }
  

  namespace sample {
    namespace observer {
      interface sample.observer.Observer {
      }
    }
  }
  

  namespace sample {
    namespace observer {
      interface sample.observer.Subject {
      }
    }
  }
  

  namespace sample {
    namespace observer {
      class sample.observer.TimerSubject {
      }
    }
  }
  

  sample.Controller .up.|> sample.observer.Observer
  sample.Controller o-- sample.components.CloseComponent : closeComponent
  sample.Controller o-- sample.components.PlaySoundComponent : playSoundComponent
  sample.Controller o-- sample.components.ShowImageComponent : showImageComponent
  sample.Starter -up-|> javafx.application.Application
  sample.components.CloseComponent .up.|> sample.observer.Observer
  sample.components.PlaySoundComponent .up.|> sample.observer.Observer
  sample.components.ShowImageComponent .up.|> sample.observer.Observer
  sample.observer.TimerSubject .up.|> sample.observer.Subject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
